...
            averageAccuracyLine
        ].joined(separator: "\n")

        let viewModel = QuizResultsAlertModel(
            title: "Этот раунд окончен!",
            text: resultMessage,
            buttonText: "Сыграть ещё раз"
        )

        viewController?.show(quiz: viewModel)
    }

    func convert(model: QuizQuestion) -> QuizStepModel {
...
